Updated data loading